--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<label>Nigger4</label>
+<p>Nigger4</p>
 
+
+<script src=""></script>r
 </body>
 </html>
