--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    
+}
+
 p{
-    font-size: 120px;
+    font-size: 100px;
+    line-height: 100px;
+ height: 100%;
+
 }
