--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <!-- Для роботи з динамічним css -->
+    <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
+
+    <!-- Для роботи сервера -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
+<div id="data-container">
 
-<p>Nigger4</p>
+</div>
 
 
-<script src=""></script>r
+<button onclick="fetchData()">Load Data</button>
+
+    <!-- Для роботи з динамічним js -->
+    <!-- <script src="../static/js/script.js"></script> -->
+
+    <!-- Для роботи сервера -->
+    <script src="/js/script.js"></script>
 </body>
+
 </html>
