--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 
     <!-- Для роботи з динамічним css -->
-    <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- Для роботи сервера -->
     <link rel="stylesheet" href="/css/style.css">
@@ -21,7 +21,7 @@
 <button onclick="fetchData()">Load Data</button>
 
     <!-- Для роботи з динамічним js -->
-    <!-- <script src="../static/js/script.js"></script> -->
+    <script src="../static/js/script.js"></script>
 
     <!-- Для роботи сервера -->
     <script src="/js/script.js"></script>
