--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- Для роботи сервера -->
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
 </head>
 
 <body>
-<div id="data-container">
+    <h1>List of Items</h1>
+    <ul class="item-catalog">
 
-</div>
+    </ul>
 
-
-<button onclick="fetchData()">Load Data</button>
+    
 
     <!-- Для роботи з динамічним js -->
     <script src="../static/js/script.js"></script>
 
     <!-- Для роботи сервера -->
-    <script src="/js/script.js"></script>
+    <!-- <script src="/js/script.js"></script> -->
 </body>
 
 </html>
