--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -14,6 +14,8 @@
 
 <body>
     <h1>List of Items</h1>
+    <button id="secondPageBtn">mamagay</button>
+
     <ul class="item-catalog">
 
     </ul>
@@ -25,6 +27,7 @@
 
     <!-- Для роботи сервера -->
      <script src="/js/script.js"></script>
+
 </body>
 
 </html>
