--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -6,10 +6,10 @@
     <title>Title</title>
 
     <!-- Для роботи з динамічним css -->
-<!--    <link rel="stylesheet" href="../static/css/style.css">-->
+   <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- Для роботи сервера -->
-     <link rel="stylesheet" href="/css/style.css">
+     <!-- <link rel="stylesheet" href="/css/style.css"> -->
 </head>
 
 <body>
@@ -23,10 +23,10 @@
     
 
     <!-- Для роботи з динамічним js -->
-<!--    <script src="../static/js/script.js"></script>-->
+   <script src="../static/js/script.js"></script>
 
     <!-- Для роботи сервера -->
-     <script src="/js/script.js"></script>
+     <!-- <script src="/js/script.js"></script> -->
 
 </body>
 
