--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,16 +25,18 @@
                 <label for="email"></label>
                 <input type="password" id="email" name="email" required><br><br>
 
-                <button type="submit">Надіслати</button>
+                <button type="submit">Log in</button>
             </form>
             <div class="line"></div>
             <div class="buttons-with-icon">
                 <button class="button-with-icon"><img src="../static/css/img/github.png" alt="icon"
                     style="width: 30px; height: 30px; margin-right: 8px;">
                 Continue with GitHub</button>
-            <button></button>
-            <button></button>
+            <button class="button-with-icon"><img src="../static/css/img/google.webp" alt="icon"
+                style="width: 30px; height: 30px; margin-right: 8px;">
+            Continue with GitHub</button>
             </div>
+            <p>Don't have an account? Sign up!</p>
            
         </div>
 
