--- a/src/main/resources/static/css/login-style.css
+++ b/src/main/resources/static/css/login-style.css
@@ -28,7 +28,7 @@ body {
     width: 500px;
     text-align: center;
     padding: 40px 0vw;
-    border-radius: 4px;
+    border-radius: 8px;
 
 }
 
@@ -44,6 +44,7 @@ body {
     border: none;
     background-color: #f2f4f5;
     border-radius: 4px;
+    padding-left: 12px;
 }
 
 #userForm p {
@@ -59,10 +60,11 @@ body {
     border: 4px solid #002F34;
     width: 70%;
     height: 50px;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
     margin-top: 20px;
+    transition: 0.3s ease;
 }
 
 #userForm button:hover {
@@ -83,6 +85,8 @@ body {
     display: flex;
     align-items: center; /* Центрування зображення і тексту по вертикалі */
     justify-content: center;
+    flex-direction: column; /* Розміщує кнопки вертикально */
+    
 }
 
 .button-with-icon{
@@ -91,11 +95,16 @@ body {
     justify-content: center;
     color: #002F34;
     cursor: pointer;
-    border: 4px solid #002F34;
+    border: 3px solid #002F34;
     width: 70%;
     height: 50px;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 10px;
 
+}
+
+.button-with-icon:hover {
+    border: 5px solid #002F34;
 }
