--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,7 @@
     <div class="userform-wrapper">
         <div class="formclass">
             <p class="title">Login in account</p>
+            <div class="line" style="margin-top: 0px;"></div>
             <form id="userForm">
                 <p>E-mail</p>
                 <label for="name"></label>
@@ -36,7 +37,7 @@
                 style="width: 30px; height: 30px; margin-right: 8px;">
             Continue with GitHub</button>
             </div>
-            <p>Don't have an account? Sign up!</p>
+            <p class="sign-up-text">Don't have an account? <a href="signup.html"><b>Sign up!</b></a></p>
            
         </div>
 
