--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+    <header>
+        <div class="header-wrapper">
+            <div class="logo">
+                <img src="../static/css/img/logo.png"" alt="logo">
+            </div>
+        </div>
+    </header>
     <h1>List of Items</h1>
     <button id="secondPageBtn">mamagay</button>
 
