--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,6 +4,32 @@
 
 }
 
+header {
+    height: 100px;
+}
+
+.header-wrapper {
+    height: 100%;
+    background-color: #002f34;
+
+}
+
+.logo {
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+}
+
+.logo img {
+    height: 70%;
+    margin-left: 20px;
+
+}
+
+
+
+
 p {
     display: flex;
     justify-content: space-between;
