--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header-wrapper">
             <div class="logo">
-                <img src="../static/css/img/logo.png"" alt="logo">
+                <img src="../static/css/img/logo.webp"  alt="logo">
             </div>
         </div>
     </header>
