--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <!-- Для роботи з динамічним css -->
-   <link rel="stylesheet" href="../static/css/login-style.css">
+   <!-- <link rel="stylesheet" href="../static/css/login-style.css"> -->
     <!-- Для роботи сервера -->
      <link rel="stylesheet" href="/css/login-style.css">
     <title>Login Page</title>
@@ -32,14 +32,14 @@
                 <button type="submit">Log in</button>
             </form>
             <div class="line"></div>
-            <div class="buttons-with-icon">
+            <!-- <div class="buttons-with-icon">
                 <button class="button-with-icon"><img src="../static/css/img/github.png" alt="icon"
                     style="width: 30px; height: 30px; margin-right: 8px;">
                 Continue with GitHub</button>
             <button class="button-with-icon"><img src="../static/css/img/google.webp" alt="icon"
                 style="width: 30px; height: 30px; margin-right: 8px;">
             Continue with GitHub</button>
-            </div>
+            </div> -->
 
             <!-- <p class="sign-up-text">Don't have an account? <a href="signup.html"><b>Sign up!</b></a></p> -->
 
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Для роботи локально -->
-    <script src="../static/js/login.js"></script>
+    <!-- <script src="../static/js/login.js"></script> -->
 
     <!-- Для роботи сервера -->
     <script src="/js/login.js"></script>
