--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -26,7 +26,7 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <p style="margin-top: 10px;">E-mail</p>
             <label for="email"></label>
-            <input type="text" id="email" name="email" required>
+            <input type="text" id="email" name="username" required>
             <div class="email-error-text" style="display: none;">E-mail is not valid</div>
             <p style="margin-top: 10px;">Password</p>
             <label for="password"></label>
