add photo adding and circle behind

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,7 +22,7 @@
         
         <p class="title">Sign Up</p>
         <div class="line" style="margin-top: 0px;"></div>
-        <form id="userForm">
+        <form id="registerForm">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <p style="margin-top: 10px;">E-mail</p>
             <label for="email"></label>
