--- a/src/main/resources/static/css/signup-style.css
+++ b/src/main/resources/static/css/signup-style.css
@@ -51,7 +51,7 @@ body {
     margin-bottom: 10px;
 }
 
-#userForm input {
+#registerForm input {
     width: 70%;
     height: 40px;
     font-size: 20px;
@@ -61,13 +61,13 @@ body {
     padding-left: 12px;
 }
 
-#userForm p {
+#registerForm p {
     text-align: left;
     transform: translateX(15%);
     padding-bottom: 10px;
 }
 
-#userForm button {
+#registerForm button {
     background-color: #002F34;
     color: white;
     cursor: pointer;
@@ -81,7 +81,7 @@ body {
     transition: 0.3s ease;
 }
 
-#userForm button:hover {
+#registerForm button:hover {
     background-color: white;
     color: #002F34;
 
