--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <!-- Для роботи з динамічним css -->
-   <!-- <link rel="stylesheet" href="../static/css/login-style.css"> -->
+   <link rel="stylesheet" href="../static/css/login-style.css">
     <!-- Для роботи сервера -->
      <link rel="stylesheet" href="/css/login-style.css">
     <title>Login Page</title>
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Для роботи локально -->
-    <!-- <script src="../static/js/login.js"></script> -->
+    <script src="../static/js/login.js"></script>
 
     <!-- Для роботи сервера -->
     <script src="/js/login.js"></script>
