--- a/src/main/resources/static/css/libraries/cropper.css
+++ b/src/main/resources/static/css/libraries/cropper.css
@@ -46,10 +46,10 @@
      opacity: 0
  }
 
- .cropper-modal {
+ /* .cropper-modal {
      background-color: #000;
      opacity: .5
- }
+ } */
 
  .cropper-view-box {
      display: block;
