--- a/src/main/resources/templates/profileInfoFilling.html
+++ b/src/main/resources/templates/profileInfoFilling.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fill your info</title>
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-<!--    <link rel="stylesheet" href="../static/css/libraries/cropper.css" />-->
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+    <!--    <link rel="stylesheet" href="../static/css/libraries/cropper.css" />-->
     <link rel="stylesheet" href="/css/libraries/cropper.css" />
-<!--    <link rel="stylesheet" href="../static/css/fillingInfo.css">-->
+    <!--    <link rel="stylesheet" href="../static/css/fillingInfo.css">-->
     <link rel="stylesheet" href="/css/fillingInfo.css">
 </head>
 
@@ -21,7 +21,7 @@
 
     <div class="cropContainerWrapper">
         <div class="cropContainer">
-<!--            <img src="../static/css/img/exitCross.png" alt="" id="exitCross">-->
+            <!--            <img src="../static/css/img/exitCross.png" alt="" id="exitCross">-->
             <img src="/css/img/exitCross.png" alt="" id="exitCross">
             <img id="image" style="max-width: 70%; display: none;" />
             <button id="cropButton">Crop</button>
@@ -52,7 +52,7 @@
                 <div style="height: 20px;"></div>
                 <p>Phone</p>
                 <label for="customerPhone"></label>
-                <input type="customerPhone" id="customerPhone" name="customerPhone" required>
+                <input type="text" id="customerPhone" name="customerPhone" required>
                 <div class="phone-error-text" style="display: none;">Enter valid phone</div>
                 <button type="submit">Save info</button>
             </form>
@@ -61,10 +61,11 @@
             <form id="fillingInfoSeller">
 
                 <p>Your photo</p>
-                <input type="file" style="opacity: 0; pointer-events: none;" id="fileInput" name="image" required accept="image/*" />
+                <input type="file" style="opacity: 0; pointer-events: none;" id="fileInput" name="file" required
+                    accept="image/*" />
                 <div class="addPhotoImgContainer" disabled>
                     <label for="fileInput" id="file-upload-button">
-<!--                        <img src="../static/css/img/insertImage.png" id="addPhotoImg" alt="">-->
+                        <!--<img src="../static/css/img/insertImage.png" id="addPhotoImg" alt="">-->
                         <img src="/css/img/insertImage.png" id="addPhotoImg" alt="">
                         <div class="photo-error" style="display: none;">Download your photo</div>
                         <img id="croppedImage" />
@@ -92,10 +93,10 @@
 
     <script src="https://unpkg.com/cropperjs/dist/cropper.min.js"></script>
     <!-- Для роботи локально -->
-<!--    <script src="../static/js/fillingInfo.js"></script>-->
+    <!--    <script src="../static/js/fillingInfo.js"></script>-->
 
     <!-- Для роботи сервера -->
-     <script src="/js/fillingInfo.js"></script>
+    <script src="/js/fillingInfo.js"></script>
 </body>
 
 </html>
