--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,16 +32,16 @@
                 <button type="submit">Log in</button>
             </form>
             <div class="line"></div>
-            <!-- <div class="buttons-with-icon">
-                <button class="button-with-icon"><img src="../static/css/img/github.png" alt="icon"
+            <div class="buttons-with-icon">
+                <button class="button-with-icon"><img src="/css/img/github.png" alt="icon"
                     style="width: 30px; height: 30px; margin-right: 8px;">
                 Continue with GitHub</button>
-            <button class="button-with-icon"><img src="../static/css/img/google.webp" alt="icon"
+            <button class="button-with-icon"><img src="/css/img/google.webp" alt="icon"
                 style="width: 30px; height: 30px; margin-right: 8px;">
             Continue with GitHub</button>
-            </div> -->
+            </div>
 
-            <!-- <p class="sign-up-text">Don't have an account? <a href="signup.html"><b>Sign up!</b></a></p> -->
+            <!-- <p class="sign-up-text">Don't have an account? <a href="signup.html"><b>Sign up!</b></a></p>
 
                 <!-- Для роботи сервера -->
             <p class="sign-up-text">Don't have an account? <a href="/signUpPage"><b>Sign up!</b></a></p>
