--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -18,8 +18,8 @@
 <div class="userform-wrapper">
 
     <div class="formclass">
-        <a href="login.html"><img id="arrow-back" src="../static/css/img/arrow.png" alt="arrow-back"></a>
-        
+        <!-- <a href="login.html"><img id="arrow-back" src="../static/css/img/arrow.png" alt="arrow-back"></a> -->
+        <a onclick="goBack()"><img id="arrow-back" src="/css/img/arrow.png" alt="arrow-back" style="cursor: pointer;"></a>
         <p class="title">Sign Up</p>
         <div class="line" style="margin-top: 0px;"></div>
         <form id="registerForm">
@@ -43,8 +43,11 @@
         </form>
         <div class="line"></div>
         <div class="buttons-with-icon">
-            <button class="button-with-icon"><img src="../static/css/img/github.png" alt="icon" style="width: 30px; height: 30px; margin-right: 8px;"> Continue with GitHub</button>
-            <button class="button-with-icon"><img src="../static/css/img/google.webp" alt="icon" style="width: 30px; height: 30px; margin-right: 8px;"> Continue with Google</button>
+            <!-- <button class="button-with-icon"><img src="../static/css/img/github.png" alt="icon" style="width: 30px; height: 30px; margin-right: 8px;"> Continue with GitHub</button> -->
+            <!-- <button class="button-with-icon"><img src="../static/css/img/google.webp" alt="icon" style="width: 30px; height: 30px; margin-right: 8px;"> Continue with Google</button> -->
+
+            <button class="button-with-icon"><img src="/css/img/github.png" alt="icon" style="width: 30px; height: 30px; margin-right: 8px;"> Continue with GitHub</button>
+            <button class="button-with-icon"><img src="/css/img/google.webp" alt="icon" style="width: 30px; height: 30px; margin-right: 8px;"> Continue with Google</button>
         </div>
     </div>
 </div>
