--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,12 +33,12 @@
             </form>
             <div class="line"></div>
             <div class="buttons-with-icon">
-                <button class="button-with-icon"><img src="/css/img/github.png" alt="icon"
+                <button class="button-with-icon" id="github-registration"><img src="/css/img/github.png" alt="icon"
                     style="width: 30px; height: 30px; margin-right: 8px;">
                 Continue with GitHub</button>
-            <button class="button-with-icon"><img src="/css/img/google.webp" alt="icon"
+            <button class="button-with-icon" id="google-registration"><img src="/css/img/google.webp" alt="icon"
                 style="width: 30px; height: 30px; margin-right: 8px;">
-            Continue with GitHub</button>
+            Continue with Google</button>
             </div>
 
             <!-- <p class="sign-up-text">Don't have an account? <a href="signup.html"><b>Sign up!</b></a></p>
