--- a/src/main/resources/templates/itemPage.html
+++ b/src/main/resources/templates/itemPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/itemPage.css">
     <link rel="stylesheet" href="../static/css/header.css">
-    <title>Document</title>
+    <title>Item Page</title>
 </head>
 <body>
     <header>
