--- a/src/main/resources/templates/itemPage.html
+++ b/src/main/resources/templates/itemPage.html
@@ -20,6 +20,11 @@
                 <button id="search-button">Search</button>
     
             </div>
+
+            <div class="signup-badge">
+                <img src="../static/css/img/default-user.png" id="default-user-icon" alt="">
+                <p><u> Login/Sign Up</u></p>
+            </div>
             <div class="cart-container">
                 <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
                 <span class="cart-badge">0</span>
@@ -51,6 +56,11 @@
                 <!-- Деталі товару -->
             </div>
         </div>
+       
+    </div>
+
+    <div class="product-description">
+        <!-- description -->
     </div>
     <script src="../static/js/shoppingCart.js"></script>
     <script src="../static/js/itemPage.js"></script>
