--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -21,11 +21,18 @@
                 <img src="../static/css/img/logo.png" alt="logo">
             </div>
             <div class="search-wrapper">
-                
+
                 <input type="text" id="search-bar" placeholder="Search...">
-                <img src="../static/css/img/search-icon.png" alt="" id="search-icon" >
+                <img src="../static/css/img/search-icon.png" alt="" id="search-icon">
                 <button id="search-button">Search</button>
-    
+
+
+
+            </div>
+
+            <div class="signup-badge">
+                <img src="../static/css/img/default-user.png" id="default-user-icon" alt="">
+                <p><u> Login/Sign Up</u></p>
             </div>
             <div class="cart-container">
                 <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
@@ -58,7 +65,7 @@
     <!-- Для роботи з динамічним js -->
     <script src="../static/js/galleryPage.js"></script>
     <script src="../static/js/shoppingCart.js"></script>
- 
+
 
 
     <!-- Для роботи сервера -->
