--- a/src/main/resources/static/css/sellerPage.css
+++ b/src/main/resources/static/css/sellerPage.css
@@ -177,25 +177,24 @@ summary {
 /* Модельне вікно */
 .modal {
     display: none; /* Спочатку приховано */
-    position: fixed;
+    position: absolute;
     z-index: 1;
     left: 0;
-    top: 0;
+    top: 130px;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); /* Прозорий чорний фон */
 }
 
 /* Контент модального вікна */
 .modal-content {
     background-color: #fefefe;
     position: relative;
-    margin: 10% auto;
+    margin: 2% auto;
     padding: 20px;
     border: 1px solid #888;
     border-radius: 10px;
-    width: 650px;
+    width: 700px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     font-family: Arial, sans-serif;
 }
@@ -207,6 +206,12 @@ summary {
     font-size: 28px;
     font-weight: bold;
     cursor: pointer;
+}
+
+.close {
+    cursor: pointer;
+    float: right;
+    font-size: 24px;
 }
 
 .close-btn:hover,
@@ -266,7 +271,8 @@ form input:focus, form textarea:focus {
     transition: 0.3s ease;
 }
 
-#fileInput {
+#fileInput, 
+#editFileInput {
     background-color: #fff !important;
     position: absolute;
     width: 10px;
@@ -296,10 +302,6 @@ form input:focus, form textarea:focus {
 
 }
 
-.cropContainerWrapper{
-    display: none;
-    position: relative;;
-}
 
 #overlay {
     display: none; /* Псевдоелемент для затемнення */
@@ -320,9 +322,11 @@ form input:focus, form textarea:focus {
     background-color: white;
     text-align: center;
     width: 60%;
-    transform: translateX(35%);
+    transform: translateX(33.5%);
     border-radius: 12px;
     padding-bottom: 20px;
+    border: 1px solid #888;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 
 }
 
@@ -368,18 +372,21 @@ img[alt="The image to crop"] {
 
 }
 
-.cropContainerWrapper{
+.cropContainerWrapper, 
+.cropContainerWrapperEdit {
     display: none;
     position: relative;;
 }
 
-#galleryContainer {
+#galleryContainer,
+#editgalleryContainer {
     display: flex;
     flex-wrap: wrap;
 }
 
 
-.image-wrapper {
+.image-wrapper, 
+.edit-image-wrapper {
     display: inline-block; /* Контейнер підлаштовується під розмір вмісту */
     line-height: 0; /* Видаляє зайві відступи, що додаються через inline */
     margin-right: 10px;
@@ -388,13 +395,15 @@ img[alt="The image to crop"] {
     position: relative;
 }
 
-.image-wrapper img {
+.image-wrapper img, 
+.edit-image-wrapper img {
     display: block; /* Зображення займає весь простір батьківського контейнера */
     width: 150px;
     height: 150px;
     transition: opacity 0.3s ease;
 }
 
+.edit-image-wrapper::after,
 .image-wrapper::after {
     content: '🗑️'; /* Іконка сміттєвої корзини */
     position: absolute;
@@ -413,8 +422,10 @@ img[alt="The image to crop"] {
     cursor: pointer;
 }
 
+
 /* Показуємо фон та іконку при наведенні */
-.image-wrapper:hover::after {
+.image-wrapper:hover::after,
+.edit-image-wrapper:hover::after {
     opacity: 1;
 }
 
@@ -424,7 +435,8 @@ img[alt="The image to crop"] {
     position: relative;
 }
 
-#addPhotoImg {
+#addPhotoImg,
+#editPhotoImg {
     width: 100px;
     cursor: pointer;
 
@@ -451,5 +463,27 @@ img[alt="The image to crop"] {
 
 #add-item:hover {
     background-color: green;
+}
 
+.product-edit-buttons-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.edit-info-button {
+    color: white;
+    background-color: #8962fe;
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s ease;
+    margin-left: 20px;
+}
+
+.preview-image{ 
+    height: 100px;
 }
