--- a/src/main/resources/templates/sellerPage.html
+++ b/src/main/resources/templates/sellerPage.html
@@ -27,6 +27,12 @@
                 <button id="search-button">Search</button>
 
             </div>
+
+            <div class="signup-badge">
+                <img src="../static/css/img/default-user.png" id="default-user-icon" alt="">
+                <p><u> Login/Sign Up</u></p>
+            </div>
+
             <div class="cart-container">
                 <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
                 <span class="cart-badge">0</span>
@@ -72,7 +78,7 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close-btn" id="closeModalBtn">&times;</span>
-            <h3>Додати товар</h3>
+            <h3>Add an Item</h3>
             <form>
                 <input type="file" style="opacity: 0; pointer-events: none;" id="fileInput" name="file" required
                     accept="image/*" />
@@ -94,7 +100,7 @@
                 </div>
 
                 <!-- Галерея доданих фото -->
-                <div id="galleryContainer" class="gallery"></div>
+                <div id="galleryContainer"></div>
 
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Item name" required>
@@ -115,6 +121,40 @@
                 <textarea id="description" name="description" placeholder="Description" rows="4"></textarea>
 
                 <button type="submit" class="submit-btn">Save</button>
+            </form>
+        </div>
+    </div>
+
+    <div id="edit-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span id="close-modal" class="close">&times;</span>
+            <form id="edit-form">
+                <input type="file" style="opacity: 0; pointer-events: none;" id="editFileInput" name="editFile" required
+                    accept="image/*" />
+
+                <!-- Іконка для завантаження фото -->
+                <div class="editPhotoImgContainer">
+                    <label for="editFileInput" id="edit-file-upload-button">
+                        <img src="../static/css/img/insertImage.png" id="editPhotoImg" alt="Редагувати фото">
+                    </label>
+                </div>
+
+                <div id="editGalleryContainer"></div>
+
+                <!-- Поля форми для редагування товару -->
+                <label for="edit-name">Name:</label>
+                <input type="text" id="edit-name" required>
+
+                <label for="edit-price">Price:</label>
+                <input type="number" id="edit-price" required>
+
+                <label for="edit-discount-price">Discount Price:</label>
+                <input type="number" id="edit-discount-price">
+
+                <label for="edit-description">Description:</label>
+                <textarea id="edit-description" rows="4"></textarea>
+
+                <button type="submit" class="submit-btn">Save Changes</button>
             </form>
         </div>
     </div>
