--- a/src/main/resources/templates/sellerPage.html
+++ b/src/main/resources/templates/sellerPage.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/libraries/cropper.css" />
-    <link rel="stylesheet" href="../static/css/header.css">
-    <link rel="stylesheet" href="../static/css/sellerPage.css">
+    <link rel="stylesheet" href="/css/libraries/cropper.css" />
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/sellerPage.css">
 
     <meta name="_csrf" th:content="${_csrf.token}" />
     <meta name="_csrf_header" th:content="${_csrf.headerName}" />
@@ -18,23 +18,23 @@
     <header>
         <div class="header-wrapper">
             <div class="logo">
-                <img src="../static/css/img/logo.png" alt="logo">
+                <img src="/css/img/logo.png" alt="logo">
             </div>
             <div class="search-wrapper">
 
                 <input type="text" id="search-bar" placeholder="Search...">
-                <img src="../static/css/img/search-icon.png" alt="" id="search-icon">
+                <img src="/css/img/search-icon.png" alt="" id="search-icon">
                 <button id="search-button">Search</button>
 
             </div>
 
             <div class="signup-badge">
-                <img src="../static/css/img/default-user.png" id="default-user-icon" alt="">
+                <img src="/css/img/default-user.png" id="default-user-icon" alt="">
                 <p><u> Login/Sign Up</u></p>
             </div>
 
             <div class="cart-container">
-                <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
+                <img src="/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
                 <span class="cart-badge">0</span>
             </div>
         </div>
@@ -65,7 +65,7 @@
 
     <div class="cropContainerWrapper">
         <div class="cropContainer">
-            <img src="../static/css/img/exitCross.png" alt="" id="exitCross">
+            <img src="/css/img/exitCross.png" alt="" id="exitCross">
             <!-- <img src="/css/img/exitCross.png" alt="" id="exitCross"> -->
             <img id="image" style="max-width: 70%; display: none;" />
             <button id="cropButton">Crop</button>
@@ -86,7 +86,7 @@
                 <!-- Іконка для завантаження фото -->
                 <div class="addPhotoImgContainer">
                     <label for="fileInput" id="file-upload-button">
-                        <img src="../static/css/img/insertImage.png" id="addPhotoImg" alt="Додати фото">
+                        <img src="/css/img/insertImage.png" id="addPhotoImg" alt="Додати фото">
                         <div class="photo-error" style="display: none;">Download your photo</div>
                     </label>
                 </div>
@@ -135,7 +135,7 @@
                 <!-- Іконка для завантаження фото -->
                 <div class="editPhotoImgContainer">
                     <label for="editFileInput" id="edit-file-upload-button">
-                        <img src="../static/css/img/insertImage.png" id="editPhotoImg" alt="Редагувати фото">
+                        <img src="/css/img/insertImage.png" id="editPhotoImg" alt="Редагувати фото">
                     </label>
                 </div>
 
@@ -166,8 +166,8 @@
 
 
     <script src="https://unpkg.com/cropperjs/dist/cropper.min.js"></script>
-    <script src="../static/js/sellerPage.js"></script>
-    <script src="../static/js/shoppingCart.js"></script>
+    <script src="/js/sellerPage.js"></script>
+    <script src="/js/shoppingCart.js"></script>
 
 
 </body>
