--- a/src/main/resources/static/css/sellerPage.css
+++ b/src/main/resources/static/css/sellerPage.css
@@ -136,6 +136,10 @@ header {
     height: auto;
 }
 
+.product-info-container {
+    padding-left: 30px;
+}
+
 details {
     margin: 10px 20px;
     padding: 10px;
@@ -469,7 +473,7 @@ img[alt="The image to crop"] {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    margin-left: auto;
 }
 
 .edit-info-button {
@@ -487,3 +491,4 @@ img[alt="The image to crop"] {
 .preview-image{ 
     height: 100px;
 }
+
